--- a/shab/web/templates/app/banners.html
+++ b/shab/web/templates/app/banners.html
@@ -37,7 +37,7 @@
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="x_panel">
             <div class="x_title">
-              <h2>پست ها<small> </small></h2>
+              <h2>نبرها ها<small> </small></h2>
               <ul class="nav navbar-right panel_toolbox">
                 <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                 </li>
@@ -61,11 +61,8 @@
               <table id="datatable" class="table table-striped table-bordered">
                 <thead>
                   <tr>
-                    <th>عنوان</th>
-                    <th>تاریخ ایجاد</th>
-                    <th>نوع پست</th>
-                    <th>نوع نمایش</th>
-                    <th></th>
+                    <th>شماره</th>
+                    <th>عنوان پست</th>
                     <th>عملیات</th>
                   </tr>
                 </thead>
@@ -73,14 +70,14 @@
 
                 <tbody>
 
-                  {% for post in posts %}
+                  {% for banner in banners %}
                   <tr>
-                  <td> {{post.Title}} </td>
-                  <td> {{post.Date}} </td>
-                  <td> {{post.Category}} </td>
-                  <td> {{post.Type}} </td>
-                <td> </td>
-                <td> <a href="/edit/{{post.id}}"> <i class="fa fa-edit"></i> </a> </td>
+                  <td> {{banner.id}} </td>
+                  <td> {{banner.Title}} </td>
+                <td> <form action="/banners" method="post">
+                  <input type="hidden" name="delid" value="{{banner.id}}">
+                  <button type="submit"> <i class="fa fa-remove"></i> </button>
+                </form>  </td>
                     </tr>
                 {% endfor %}
                 </tbody>
@@ -93,6 +90,50 @@
 
 
       </div>
+
+
+
+      <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12">
+          <div class="x_panel">
+            <div class="x_title">
+              <h2>اضافه کردن بنر <small></small></h2>
+               <ul class="nav navbar-right panel_toolbox">
+               <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                </li>
+                <li><a class="close-link"><i class="fa fa-close"></i></a>
+                </li>
+              </ul>
+              <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+              <br />
+              <form id="demo-form3" method="post" action="/banners"  data-parsley-validate class="form-horizontal form-label-left">
+              <div class="form-group">
+                <div class="form-group">
+                  <label class="control-label col-md-3 col-sm-3 col-xs-12">پست ها</label>
+                  <div class="col-md-6 col-sm-6 col-xs-6">
+                    <select name="newbanner" class="select2_single form-control" tabindex="-1">
+                      <option></option>
+                      {% for post in anotherpost %}
+                      <option value="{{post.id}}">{{post.Title}}</option>
+                      {% endfor %}
+                    </select>
+                  </div>
+                  <div class="col-md-6 col-sm-6 col-xs-6">
+                  <button class="btn btn-info" type="submit"> اضافه کردن پست </button>
+                  </div>
+                </div>
+              </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
     </div>
 
 
