--- a/shab/web/templates/app/comments.html
+++ b/shab/web/templates/app/comments.html
@@ -37,7 +37,7 @@
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="x_panel">
             <div class="x_title">
-              <h2>پست ها<small> </small></h2>
+              <h2>نظرات ها<small> </small></h2>
               <ul class="nav navbar-right panel_toolbox">
                 <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                 </li>
@@ -61,26 +61,27 @@
               <table id="datatable" class="table table-striped table-bordered">
                 <thead>
                   <tr>
-                    <th>عنوان</th>
-                    <th>تاریخ ایجاد</th>
-                    <th>نوع پست</th>
-                    <th>نوع نمایش</th>
-                    <th></th>
-                    <th>عملیات</th>
+                    <th>شماره</th>
+                    <th>عنوان پست</th>
+                    <th>شرح نظر</th>
+                    <th>  وضعیت </th>
+                    <th> عملیات </th>
                   </tr>
                 </thead>
 
 
                 <tbody>
 
-                  {% for post in posts %}
+                  {% for cm in comments %}
                   <tr>
-                  <td> {{post.Title}} </td>
-                  <td> {{post.Date}} </td>
-                  <td> {{post.Category}} </td>
-                  <td> {{post.Type}} </td>
-                <td> </td>
-                <td> <a href="/edit/{{post.id}}"> <i class="fa fa-edit"></i> </a> </td>
+                  <td> {{cm.id}} </td>
+                  <td> {{cm.RelPost.Title}} </td>
+                  <td> {{cm.Text}} </td>
+                  <td> {{cm.Valid}} </td>
+                <td> <form action="/showcomments" method="post">
+                  <input type="hidden" name="cmid" value="{{cm.id}}">
+                  <button type="submit"> {% if cm.Valid %} <i class="fa fa-remove"></i> {% else %} <i class="fa fa-check"></i> {% endif %} </button>
+                </form>  </td>
                     </tr>
                 {% endfor %}
                 </tbody>
@@ -93,6 +94,13 @@
 
 
       </div>
+
+
+
+
+
+
+
     </div>
 
 
