--- a/shab/web/templates/app/sidebar.html
+++ b/shab/web/templates/app/sidebar.html
@@ -28,10 +28,11 @@
         </li>
         <li><a href="/newpost"><i class="fa fa-edit"></i> پست جدید </a>
         </li>
-        <li><a><i class="fa fa-desktop"></i> UI Elements <span class="fa fa-chevron-down"></span></a>
+        <li><a><i class="fa fa-desktop"></i> المان ها <span class="fa fa-chevron-down"></span></a>
           <ul class="nav child_menu">
-            <li><a href="general_elements.html">General Elements</a></li>
-            <li><a href="media_gallery.html">Media Gallery</a></li>
+            <li><a href="/posts">پست ها</a></li>
+            <li><a href="/banners">بنر ها</a></li>
+            <li><a href="/showcomments">نظرات</a></li>
             <li><a href="typography.html">Typography</a></li>
             <li><a href="icons.html">Icons</a></li>
             <li><a href="glyphicons.html">Glyphicons</a></li>
