--- a/shab/web/templates/app/tables.html
+++ b/shab/web/templates/app/tables.html
@@ -11,7 +11,7 @@
     <div class="">
       <div class="page-title">
         <div class="title_left">
-          <h3>Tables <small>Some examples to get you started</small></h3>
+          <h3>پست ها <small>Some examples to get you started</small></h3>
         </div>
 
         <div class="title_right">
