--- a/shab/web/templates/post.html
+++ b/shab/web/templates/post.html
@@ -129,7 +129,7 @@
               </div>
             </div>
             <div class="divintro"><span class="intro">{{post.SubTitle}}</span></div>
-            <div class="divintro"><p class="card-text">{{post.Text|safe}}</p></div>
+            <div class="divintro" style=" margin: 5%;"><p class="card-text">{{post.Text|safe}}</p></div>
             <div class="row">
               {% for tag in tags %}
                               <a class="bdg" href="/tag/{{tag}}"> <span class="bdg badge badge-pill badge-secondary">&nbsp&nbsp{{tag}}&nbsp&nbsp</span> </a>
