--- a/shab/web/templates/post23.html
+++ b/shab/web/templates/post23.html
@@ -132,7 +132,7 @@
           </div>
 
           <div class="row">
-            <div class="divintro"><p class="card-text"> {{post.Text|safe}}</p></div>
+            <div class="divintro" style=" margin: 5%;"><p class="card-text"> {{post.Text|safe}}</p></div>
           </div>
           <div class="row">
             {% for tag in tags %}
