--- a/shab/web/templates/post2.html
+++ b/shab/web/templates/post2.html
@@ -140,7 +140,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="divintro"><p class="card-text">{{post.Text|safe}}</p></div>
+            <div class="divintro" style=" margin: 5%;"><p class="card-text">{{post.Text|safe}}</p></div>
           </div>
             <div class="row">
 
