--- a/shab/web/templates/index.html
+++ b/shab/web/templates/index.html
@@ -59,7 +59,7 @@
             <div class="row col-12"><p style="color:gray ; font-size:0.7rem"> {{b1.About|safe}}  </p> </div>
             <div class="row col-12"><h6> {{ b1.Title|safe }}  </h6> </div>
           </div>
-          <div class="divintro"><p class="card-text"> {{b1.Text|striptags|slice:":130"}}</span></span></p></div>
+          <div class="divintro"><p class="card-text"> {{b1.Text|striptags|slice:":130"|replace('&nbsp;', ' ')}}</span></span></p></div>
         </div>
 
       </div>
@@ -81,7 +81,7 @@
             <div class="row col-12"><p style="color:gray ; font-size:0.7rem"> {{b1.About|safe}}  </p> </div>
             <div class="row col-12"><h6> {{ b1.Title|safe }}  </h6> </div>
           </div>
-          <div class="divintro"><p class="card-text"> {{b1.Text|striptags|slice:":250"}}</span></span></p></div>
+          <div class="divintro"><p class="card-text"> {{b1.Text|striptags|slice:":250"|replace('&nbsp;', ' ')}}</span></span></p></div>
         </div>
 
       </div>
@@ -108,7 +108,7 @@
             </div>
           </div>
           <div class="col-6 mid">
-            <div class="divintro"><p class="card-text">{{b1.Text|striptags|slice:":130"}}</span></span></p></div>
+            <div class="divintro"><p class="card-text">{{b1.Text|striptags|slice:":130"|replace('&nbsp;', ' ')}}</span></span></p></div>
           </div>
         </div>
       </div>
@@ -140,7 +140,7 @@
             <div class="row col-12"><p style="color:gray ; font-size:0.7rem"> {{b2.About|safe}}  </p> </div>
             <div class="row col-12"><h6> {{ b2.Title|safe }}  </h6> </div>
           </div>
-          <div class="divintro"><p class="card-text"> {{b2.Text|striptags|slice:":130"}}</span></span></p></div>
+          <div class="divintro"><p class="card-text"> {{b2.Text|striptags|slice:":130"|replace('&nbsp;', ' ')}}</span></span></p></div>
         </div>
 
       </div>
@@ -162,7 +162,7 @@
             <div class="row col-12"><p style="color:gray ; font-size:0.7rem"> {{b2.About|safe}}  </p> </div>
             <div class="row col-12"><h6> {{ b2.Title|safe }}  </h6> </div>
           </div>
-          <div class="divintro"><p class="card-text"> {{b2.Text|striptags|slice:":250"}}</span></span></p></div>
+          <div class="divintro"><p class="card-text"> {{b2.Text|striptags|slice:":250"|replace('&nbsp;', ' ')}}</span></span></p></div>
         </div>
 
       </div>
@@ -189,7 +189,7 @@
             </div>
           </div>
           <div class="col-6 mid">
-            <div class="divintro"><p class="card-text">{{b2.Text|striptags|slice:":130"}}</span></span></p></div>
+            <div class="divintro"><p class="card-text">{{b2.Text|striptags|slice:":130"|replace('&nbsp;', ' ')}}</span></span></p></div>
           </div>
         </div>
       </div>
@@ -245,7 +245,7 @@
       <div class="row">
         <div class="divintro"><span class="intro">{{post.SubTitle}}</span></div>
       </div>
-      <div class="row"> <div class="divintro"><p class="card-text">{{post.Text|striptags|slice:":300"}}</span></span></p></div>
+      <div class="row"> <div class="divintro"><p class="card-text">{{post.Text|striptags|slice:":300"|replace('&nbsp;', ' ')}}</span></span></p></div>
       </div>
     </div>
   </div>
@@ -274,7 +274,7 @@
           </div>
         </div>
       </div>
-      <div class="row"> <div class="divintro"><p class="card-text">{{post.Text|striptags|slice:":300"}}</span></span></p></div>
+      <div class="row"> <div class="divintro"><p class="card-text">{{post.Text|striptags|slice:":300"|replace('&nbsp;', ' ')}}</span></span></p></div>
       </div>
     </div>
   </div>
@@ -303,7 +303,7 @@
           </div>
         </div>
       </div>
-      <div class="row"> <div class="divintro"><p class="card-text">{{post.Text|striptags|slice:":300"}}</span></span></p></div>
+      <div class="row"> <div class="divintro"><p class="card-text">{{post.Text|striptags|slice:":300"|replace('&nbsp;', ' ')}}</span></span></p></div>
       </div>
     </div>
   </div>
