--- a/shab/web/templates/app/tables_dynamic.html
+++ b/shab/web/templates/app/tables_dynamic.html
@@ -80,7 +80,7 @@
                   <td> {{post.Category}} </td>
                   <td> {{post.Type}} </td>
                 <td> </td>
-                <td> <a href="/edit/{{post.id}}"> <i class="fa fa-edit"></i> </a> </td>
+                <td> <a href="/edit/{{post.id}}"> <i class="fa fa-edit"></i> </a> <a href="/delpost/{{post.id}}"> <i class="fa fa-remove"></i> </a> </td>
                     </tr>
                 {% endfor %}
                 </tbody>
