--- a/shab/web/templates/index.html
+++ b/shab/web/templates/index.html
@@ -11,10 +11,19 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">لذت متن <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="javascript:filter('article');"    >سرمقاله <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">لذت نقد</a>
+        <a class="nav-link" href="javascript:filter('LM');">لذت متن</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="javascript:filter('LN');">لذت نقد</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="javascript:filter('LK');">لذت کشف</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="javascript:filter('RS');">به روایت شما </a>
       </li>
 
       <li class="nav-item col-2 brand">
@@ -22,8 +31,10 @@
        </li>
     </ul>
     <ul class="navbar-nav">
-      <li class="nav-item"> <a class="nav-link" href="#">چهل سالگی</a></li>
-      <li class="nav-item"> <a class="nav-link" href="#">پادساعت</a></li>
+      <li class="nav-item"> <a class="nav-link" href="javascript:filter('chel');" >چهل سالگی</a></li>
+      <li class="nav-item"> <a class="nav-link" href="javascript:filter('PW');">پادساعت</a></li>
+      <li class="nav-item"> <a class="nav-link" href="javascript:filter('PZ');">پژوهش</a></li>
+      <li class="nav-item"> <a class="nav-link" href="javascript:filter('GG');">گفتگو</a></li>
       <li class="nav-item"> <a class="nav-link" href="#"><i class="fas fa-search"></i></a></li>
     </ul>
 
@@ -221,7 +232,7 @@
 <div class="card-columns" style="margin-left: 2% ; margin-right: 2%">
   {% for post in posts %}
   {% if post.Type == 'avatarbase' %}
-  <div class="card mycard zoom" onclick="location.href='/post/{{post.id}}';">
+  <div class="card mycard zoom mypost {{post.Category}}" onclick="location.href='/post/{{post.id}}';">
     {%if post.Category == 'article' %} <div class="card-header" style="background-color: #00aeef;  height: 0.35rem; padding: 0 !important;"></div> {% endif %}
     {%if post.Category == 'LM' %} <div class="card-header" style="background-color: #28ef7d;  height: 0.35rem; padding: 0 !important;"></div> {% endif %}
     {%if post.Category == 'LN' %} <div class="card-header" style="background-color: #e2ef4d;  height: 0.35rem; padding: 0 !important;"></div> {% endif %}
@@ -251,7 +262,7 @@
   </div>
   {% endif %}
   {% if post.Type == 'bigimage' %}
-  <div class="card mycard zoom" onclick="location.href='/post/{{post.id}}';">
+  <div class="card mycard zoom mypost {{post.Category}}" onclick="location.href='/post/{{post.id}}';">
     {%if post.Category == 'article' %} <div class="card-header" style="background-color: #00aeef;  height: 0.35rem; padding: 0 !important;"></div> {% endif %}
     {%if post.Category == 'LM' %} <div class="card-header" style="background-color: #28ef7d;  height: 0.35rem; padding: 0 !important;"></div> {% endif %}
     {%if post.Category == 'LN' %} <div class="card-header" style="background-color: #e2ef4d;  height: 0.35rem; padding: 0 !important;"></div> {% endif %}
@@ -282,7 +293,7 @@
 
   {% if post.Type == 'thumbbase' %}
 
-  <div class="card mycard zoom" onclick="location.href='/post/{{post.id}}';">
+  <div class="card mycard zoom mypost {{post.Category}}" onclick="location.href='/post/{{post.id}}';">
     {%if post.Category == 'article' %} <div class="card-header" style="background-color: #00aeef;  height: 0.35rem; padding: 0 !important;"></div> {% endif %}
     {%if post.Category == 'LM' %} <div class="card-header" style="background-color: #28ef7d;  height: 0.35rem; padding: 0 !important;"></div> {% endif %}
     {%if post.Category == 'LN' %} <div class="card-header" style="background-color: #e2ef4d;  height: 0.35rem; padding: 0 !important;"></div> {% endif %}
@@ -330,6 +341,22 @@ for (i = 0; i < x.length; i++) {
 }
 
     });
+
+function filter(category) {
+    var divsToHide = document.getElementsByClassName("mypost"); //divsToHide is an array
+    var divsToShow = document.getElementsByClassName(category); //divsToHide is an array
+    for(var i = 0; i < divsToHide.length; i++){
+        divsToHide[i].style.visibility = "hidden"; // or
+        divsToHide[i].style.display = "none"; // depending on what you're doing
+    }
+    for(var i = 0; i < divsToShow.length; i++){
+        divsToShow[i].style.visibility = "visible"; // or
+        divsToShow[i].style.display = "inline-block"; // depending on what you're doing
+    }
+
+}
+
+
 </script>
 
 {% endblock %}
