button send comment fixed

--- a/shab/web/templates/post2.html
+++ b/shab/web/templates/post2.html
@@ -197,6 +197,11 @@
       <textarea name="text" type="text" class="form-control" required id="text"> </textarea>
     </div>
   </div>
+
+      <div class="col-sm-12">
+    <button type="submit" class="btn btn-primary btn-block">ارسال نظر</button>
+    </div>
+      
 </form>
   </div>
 </div>
