--- a/shab/web/templates/app/editpost.html
+++ b/shab/web/templates/app/editpost.html
@@ -73,10 +73,10 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <label class="control-label col-md-3 col-sm-3 col-xs-12" for="subtitle">سوتیتر<span class="required">*</span>
+                  <label class="control-label col-md-3 col-sm-3 col-xs-12" for="subtitle">سوتیتر<span>*</span>
                   </label>
                   <div class="col-md-6 col-sm-6 col-xs-12">
-                    <input type="text" id="subtitle" name="subtitle" required="required" class="form-control col-md-7 col-xs-12" value="{{post.SubTitle}}">
+                    <input type="text" id="subtitle" name="subtitle"  class="form-control col-md-7 col-xs-12" value="{{post.SubTitle}}">
                   </div>
                 </div>
 
@@ -192,7 +192,7 @@
                   <label class="control-label col-md-3 col-sm-3 col-xs-12" for="subtitle">سوتیتر<span class="required">*</span>
                   </label>
                   <div class="col-md-6 col-sm-6 col-xs-12">
-                    <input type="text" value="{{post.SubTitle}}" id="subtitle2" name="subtitle" required="required" class="form-control col-md-7 col-xs-12">
+                    <input type="text" value="{{post.SubTitle}}" id="subtitle2" name="subtitle"  class="form-control col-md-7 col-xs-12">
                   </div>
                 </div>
 
@@ -311,10 +311,10 @@
                 </div>
 
                 <div class="form-group">
-                  <label class="control-label col-md-3 col-sm-3 col-xs-12" for="subtitle">سوتیتر<span class="required">*</span>
+                  <label class="control-label col-md-3 col-sm-3 col-xs-12" for="subtitle">سوتیتر<span></span>
                   </label>
                   <div class="col-md-6 col-sm-6 col-xs-12">
-                    <input type="text" value="{{post.SubTitle}}" id="subtitle3" name="subtitle" required="required" class="form-control col-md-7 col-xs-12">
+                    <input type="text" value="{{post.SubTitle}}" id="subtitle3" name="subtitle"  class="form-control col-md-7 col-xs-12">
                   </div>
                 </div>
 
