some bug fixed!

--- a/shab/web/templates/app/form.html
+++ b/shab/web/templates/app/form.html
@@ -50,14 +50,14 @@
                   <div class="col-md-6 col-sm-6 col-xs-6">
                     <select name="category" class="select2_single form-control" tabindex="-1">
                       <option></option>
-                      <option value="article">مقاله</option>
+                      <option value="article">سرمقاله</option>
                       <option value="LM">لذت متن</option>
                       <option value="LN">لذت نقد</option>
                       <option value="LK">لذت کشف</option>
                       <option value="chel">چهل سالگی</option>
                       <option value="PZ">پژوهش</option>
                       <option value="GG">گفتگو</option>
-                      <option value="PW">پادساعات</option>
+                      <option value="PW">پادساعت</option>
                       <option value="RS">به روایت شما</option>
                     </select>
                   </div>
@@ -154,14 +154,14 @@
                   <div class="col-md-6 col-sm-6 col-xs-6">
                     <select name="category" class="select2_single form-control" tabindex="-1">
                       <option></option>
-                      <option value="article">مقاله</option>
+                      <option value="article">سرمقاله</option>
                       <option value="LM">لذت متن</option>
                       <option value="LN">لذت نقد</option>
                       <option value="LK">لذت کشف</option>
                       <option value="chel">چهل سالگی</option>
                       <option value="PZ">پژوهش</option>
                       <option value="GG">گفتگو</option>
-                      <option value="PW">پادساعات</option>
+                      <option value="PW">پادساعت</option>
                       <option value="RS">به روایت شما</option>
                     </select>
                   </div>
@@ -271,14 +271,14 @@
                   <div class="col-md-6 col-sm-6 col-xs-6">
                     <select name="category" class="select2_single form-control" tabindex="-1">
                       <option></option>
-                      <option value="article">مقاله</option>
+                      <option value="article">سرمقاله</option>
                       <option value="LM">لذت متن</option>
                       <option value="LN">لذت نقد</option>
                       <option value="LK">لذت کشف</option>
                       <option value="chel">چهل سالگی</option>
                       <option value="PZ">پژوهش</option>
                       <option value="GG">گفتگو</option>
-                      <option value="PW">پادساعات</option>
+                      <option value="PW">پادساعت</option>
                       <option value="RS">به روایت شما</option>
                     </select>
                   </div>
