--- a/shab/web/templates/index.html
+++ b/shab/web/templates/index.html
@@ -35,7 +35,9 @@
       <li class="nav-item"> <a class="nav-link" href="javascript:filter('PW');">پادساعت</a></li>
       <li class="nav-item"> <a class="nav-link" href="javascript:filter('PZ');">پژوهش</a></li>
       <li class="nav-item"> <a class="nav-link" href="javascript:filter('GG');">گفتگو</a></li>
-      <li class="nav-item"> <a class="nav-link" href="#"><i class="fas fa-search"></i></a></li>
+      <li class="nav-item">
+
+      </li>
     </ul>
 
   </div>
