--- a/shab/web/templates/app/related.html
+++ b/shab/web/templates/app/related.html
@@ -16,7 +16,7 @@
     <div class="">
       <div class="page-title">
         <div class="title_left">
-          <h3>پست ها  <small></small></h3>
+          <h3> پست های مرتبط شده <small></small></h3>
         </div>
 
         <div class="title_right">
@@ -37,7 +37,7 @@
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="x_panel">
             <div class="x_title">
-              <h2>پست ها<small> </small></h2>
+              <h2> پست های مرتبط شده<small> </small></h2>
               <ul class="nav navbar-right panel_toolbox">
                 <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                 </li>
@@ -58,17 +58,11 @@
             <div class="x_content">
               <p class="text-muted font-13 m-b-30">
               </p>
-              {% if message %}
-            <div class="alert alert-success" role="alert">{{message}}</div>
-            {% endif %}
               <table id="datatable" class="table table-striped table-bordered">
                 <thead>
                   <tr>
-                    <th>عنوان</th>
-                    <th>تاریخ ایجاد</th>
-                    <th>نوع پست</th>
-                    <th>نوع نمایش</th>
-                    <th></th>
+                    <th>شماره</th>
+                    <th>عنوان پست</th>
                     <th>عملیات</th>
                   </tr>
                 </thead>
@@ -76,14 +70,14 @@
 
                 <tbody>
 
-                  {% for post in posts %}
+                  {% for relpost in relatedposts %}
                   <tr>
-                  <td> {{post.Title}} </td>
-                  <td> {{post.Date}} </td>
-                  <td> {{post.Category}} </td>
-                  <td> {{post.Type}} </td>
-                <td> </td>
-                <td> <a href="/related/{{post.id}}"> <i class="fa fa-link"></i> </a>   <a href="/editpost/{{post.id}}"> <i class="fa fa-edit"></i> </a> <a href="/delpost/{{post.id}}"> <i class="fa fa-remove"></i> </a> </td>
+                  <td> {{relpost.id}} </td>
+                  <td> {{relpost.related.Title}} </td>
+                <td> <form action="/related/{{relpost.MainPost.id}}/" method="post">
+                  <input type="hidden" name="delid" value="{{relpost.id}}">
+                  <button type="submit"> <i class="fa fa-remove"></i> </button>
+                </form>  </td>
                     </tr>
                 {% endfor %}
                 </tbody>
@@ -96,6 +90,50 @@
 
 
       </div>
+
+
+
+      <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12">
+          <div class="x_panel">
+            <div class="x_title">
+              <h2>اضافه کردن پست مرتبط <small></small></h2>
+               <ul class="nav navbar-right panel_toolbox">
+               <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                </li>
+                <li><a class="close-link"><i class="fa fa-close"></i></a>
+                </li>
+              </ul>
+              <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+              <br />
+              <form id="demo-form3" method="post" action=""  data-parsley-validate class="form-horizontal form-label-left">
+              <div class="form-group">
+                <div class="form-group">
+                  <label class="control-label col-md-3 col-sm-3 col-xs-12">پست ها</label>
+                  <div class="col-md-6 col-sm-6 col-xs-6">
+                    <select name="newrelated" class="select2_single form-control" tabindex="-1">
+                      <option></option>
+                      {% for post in posts %}
+                      <option value="{{post.id}}">{{post.Title}}</option>
+                      {% endfor %}
+                    </select>
+                  </div>
+                  <div class="col-md-6 col-sm-6 col-xs-6">
+                  <button class="btn btn-info" type="submit"> اضافه کردن پست </button>
+                  </div>
+                </div>
+              </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
     </div>
 
 
