fix related post

--- a/shab/web/templates/post.html
+++ b/shab/web/templates/post.html
@@ -138,7 +138,7 @@
 
               </div>
           </div>
-
+ {% if relatedposts %}
            <div class="card-footer text-center">
             <div class=""> <h5> مطالب مرتبط </h5> </div>
             <div class="row">
@@ -157,6 +157,7 @@
 
             </div>
           </div>
+          {% endif %}
         </div>
       </div>
       <div class="col-2">
