--- a/shab/web/templates/post2.html
+++ b/shab/web/templates/post2.html
@@ -152,6 +152,8 @@
 
               </div>
           </div>
+
+          {% if relatedposts %}
           <div class="card-footer text-center">
             <div class=""> <h5> مطالب مرتبط </h5> </div>
             <div class="row">
@@ -170,6 +172,7 @@
 
             </div>
           </div>
+          {% endif %}
         </div>
       </div>
       <div class="col-2">
