--- a/shab/web/templates/post23.html
+++ b/shab/web/templates/post23.html
@@ -143,7 +143,7 @@
           </div>
         </div>
 
-
+ {% if relatedposts %}
  <div class="card-footer text-center">
             <div class=""> <h5> مطالب مرتبط </h5> </div>
             <div class="row">
@@ -162,6 +162,7 @@
 
             </div>
           </div>
+        {% endif %}
 
 
       </div>
