--- a/shab/web/templates/template.html
+++ b/shab/web/templates/template.html
@@ -28,6 +28,8 @@
 
 
   <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.0/jquery.matchHeight-min.js"></script>
+
 
 
   <script>
@@ -36,10 +38,11 @@
       $(this).toggleClass("far fa");
       $(this).toggleClass("gray red");
     });
+
+    $('.box').matchHeight();
+
+
   });
-
-
-
 
 
 
