--- a/shab/web/templates/template.html
+++ b/shab/web/templates/template.html
@@ -39,7 +39,8 @@
       $(this).toggleClass("gray red");
     });
 
-    $('.box').matchHeight();
+    while(true){
+    $('.box').matchHeight(); }
 
 
   });
