--- a/shab/web/templates/template.html
+++ b/shab/web/templates/template.html
@@ -39,8 +39,8 @@
       $(this).toggleClass("gray red");
     });
 
-    while(true){
-    $('.box').matchHeight(); }
+
+    $('.box').matchHeight(); 
 
 
   });
