--- a/shab/web/templates/template.html
+++ b/shab/web/templates/template.html
@@ -40,10 +40,16 @@
     });
 
 
-    $('.box').matchHeight(); 
+    $('.box').matchHeight();
+
+
 
 
   });
+
+  $('#carouselExampleIndicators').bind('slide.bs.carousel', function (e) {
+    $('.box').matchHeight();
+});
 
 
 
