--- a/shab/web/templates/template.html
+++ b/shab/web/templates/template.html
@@ -46,6 +46,11 @@
     $('.box').matchHeight();
 });
 
+    $("#carouselExampleIndicators").on("slid", function(){
+    // do something
+        $('.box').matchHeight();
+});
+
 
 
 
